--- a/web/frames/chatroom.html
+++ b/web/frames/chatroom.html
@@ -4,13 +4,14 @@
   <link rel="stylesheet" href="../css/master.css">
   <link rel="stylesheet" href="css/master.css">
   <link rel="stylesheet" href="css/chatroom.css">
+  <script src="../js/markup-variables.js"></script>
   <script src="../js/authentification.js"> </script>
   <script src="js/options.js"> </script>
   <script src="js/chatroom.js"> </script>
-  <title> %appname% App (%chatlabel% Chat) </title>
+  <title> %appname% App (%chat_label% Chat) </title>
 </head>
 <body>
-  <h1> %chatlabel% Chat </h1>
+  <h1> %chat_label% Chat </h1>
   <textarea readonly class="chat-area"></textarea>
   <div class="chat-input-field">
     <textarea class="chat-text"></textarea>
